crates/atlas-runtime/tests/snapshots/frontend_syntax__parse_nested_function_no_params.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
assertion_line: 480
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
      type_params: []
      params: []
      return_type:
        Named:
          - number
          - start: 23
            end: 29
      predicate: ~
      body:
        statements:
          - FunctionDecl:
              name:
                name: get_value
                span:
                  start: 47
                  end: 56
              type_params: []
              params: []
              return_type:
                Named:
                  - number
                  - start: 62
                    end: 68
              predicate: ~
              body:
                statements:
                  - Return:
                      value:
                        Literal:
                          - Number: 42
                          - start: 94
                            end: 96
                      span:
                        start: 87
                        end: 97
                span:
                  start: 69
                  end: 111
              span:
                start: 44
                end: 111
          - Return:
              value:
                Call:
                  callee:
                    Identifier:
                      name: get_value
                      span:
                        start: 131
                        end: 140
                  args: []
                  span:
                    start: 131
                    end: 142
              span:
                start: 124
                end: 143
        span:
          start: 30
          end: 153
      span:
        start: 9
        end: 153
