crates/atlas-runtime/tests/snapshots/frontend_syntax__parse_variable_reference.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Identifier:
            name: x
            span:
              start: 0
              end: 1
        span:
          start: 0
          end: 2
