crates/atlas-runtime/tests/snapshots/frontend_syntax__precedence_comparison_over_or.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Or
        left:
          Binary:
            op: Eq
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
            right:
              Literal:
                - Number: 1
                - start: 5
                  end: 6
            span:
              start: 0
              end: 6
        right:
          Binary:
            op: Ne
            left:
              Literal:
                - Number: 2
                - start: 10
                  end: 11
            right:
              Literal:
                - Number: 2
                - start: 15
                  end: 16
            span:
              start: 10
              end: 16
        span:
          start: 0
          end: 16
    span:
      start: 0
      end: 17
